- Correct write to servers.txt for version search.
- Fix lockMap_randX/Y. lockMap_x/y acting as the top right corner of the
  rectangle. This is now treated as the center of the rectangle.
- Stopped the annoying "Attempted to use skill you do not have."
  messages by moving the message from error to debug.
- Fix autoBreakTime not working on some systems.
- Fix 'store desc <num>' command.

New features:
- Beginnings of code that will allow skill usage on non-partied players.
  deltaHp condition added (currently useless to non-developers).
- Support for the 'charServer_ip', and 'charServer_port' options
  in servers.txt, which allow you to force connection to a specific
  map server.
- Support for eAthena servers. Set serverType to 3 for these servers.
- The _inInventory option's syntax has changed.
  Previous syntax:
    inInventory_name Red Potion,Blue Gem,AnotherItem
    inInventory_qty >5,>0,=10
  New syntax:
    inInventory Red Potion >5,Blue Gem,AnotherItem=10

Credits:
- Squall: some minor fixes, charServer support in servers.txt.
- kaliwanagan, piroJOKE: eathena support.
- zdivpsa: PVP mode packet support
- jsteng: new syntax for the inInventory option.

==================
### 1.6.0
==================

** INCOMPATIBLE CHANGES **:
- Fixed spelling of two monsters.
  Bon Gun is now Bongun.
  Requim is now Requiem.

Bug fixes:
- Fixed a memory problem in the pathfinding code which makes Kore crash.
- Fix bulk selling bug which caused disconnect.
- Correctly set names for VVVS weapons.
- Correct strip language code in public messages.
- Chat messages were saying "chatMsgUser" instead of the person's name.
- target_timeout should work with skills like Kyrie Eleison now. (The problem
  was it says "<target> uses Kyrie Eleison on self", instead of "You use Kyrie
  Eleison on <target>". It now recognizes the former when setting timeouts)
- The Wx interface can now correctly launch a browser on Linux.
- Fix display of map name in config.txt chat entries.